--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Navbar from '../components/Navbar';
 import Hero from '../landing-sections/Hero.astro';
 import Experience from '../landing-sections/Experience.astro';
 import Projects from '../landing-sections/Projects.astro';
+import Articles from '../landing-sections/Articles.astro';
 import Footer from '../landing-sections/Footer.astro';
 ---
 
@@ -12,5 +13,6 @@ import Footer from '../landing-sections/Footer.astro';
     <Hero/>
     <Experience/>
     <Projects/>
+    <Articles/>
     <Footer/>
 </Layout>
